src/ffi.rs


    // Shapes
    // Basic shapes drawing functions
    pub fn DrawPixel(posX: c_int, posY: c_int, color: Color);
    pub fn DrawPixelV(position: Vector2, color: Color);
    pub fn DrawLine(
        startPosX: c_int,
        startPosY: c_int,
        endPosX: c_int,
        endPosY: c_int,
        color: Color,
    );
    pub fn DrawLineV(startPos: Vector2, endPos: Vector2, color: Color);
    pub fn DrawLineEx(startPos: Vector2, endPos: Vector2, thick: c_float, color: Color);
    pub fn DrawLineBezier(startPos: Vector2, endPos: Vector2, thick: c_float, color: Color);
    pub fn DrawLineStrip(points: *mut Vector2, numPoints: c_int, color: Color);
    pub fn DrawCircle(centerX: c_int, centerY: c_int, radius: f32, color: Color);
    pub fn DrawCircleSector(
        center: Vector2,
        radius: c_float,
        startAngle: c_int,
        endAngle: c_int,
        segments: c_int,
        color: Color,
    );
    pub fn DrawCircleSectorLines(
        center: Vector2,
        radius: c_float,
        startAngle: c_int,
        endAngle: c_int,
        segments: c_int,
        color: Color,
    );
    pub fn DrawCircleGradient(
        centerX: c_int,
        centerY: c_int,
        radius: f32,
        color1: Color,
        color2: Color,
    );
    pub fn DrawCircleV(center: Vector2, radius: f32, color: Color);
    pub fn DrawCircleLines(centerX: c_int, centerY: c_int, radius: f32, color: Color);
    pub fn DrawEllipse(
        centerX: c_int,
        centerY: c_int,
        radiusH: c_float,
        radiusV: c_float,
        color: Color,
    );
    pub fn DrawEllipseLines(
        centerX: c_int,
        centerY: c_int,
        radiusH: c_float,
        radiusV: c_float,
        color: Color,
    );
    pub fn DrawRing(
        center: Vector2,
        innerRadius: c_float,
        outerRadius: c_float,
        startAngle: c_int,
        endAngle: c_int,
        segments: c_int,
        color: Color,
    );
    pub fn DrawRingLines(
        center: Vector2,
        innerRadius: c_float,
        outerRadius: c_float,
        startAngle: c_int,
        endAngle: c_int,
        segments: c_int,
        color: Color,
    );
    pub fn DrawRectangle(posX: c_int, posY: c_int, width: c_int, height: c_int, color: Color);
    pub fn DrawRectangleV(position: Vector2, size: Vector2, color: Color);
    pub fn DrawRectangleRec(rec: Rectangle, color: Color);
    pub fn DrawRectanglePro(rec: Rectangle, origin: Vector2, rotation: c_float, color: Color);
    pub fn DrawRectangleGradientV(
        posX: c_int,
        posY: c_int,
        width: c_int,
        height: c_int,
        color1: Color,
        color2: Color,
    );
    pub fn DrawRectangleGradientH(
        posX: c_int,
        posY: c_int,
        width: c_int,
        height: c_int,
        color1: Color,
        color2: Color,
    );
    pub fn DrawRectangleGradientEx(
        rec: Rectangle,
        col1: Color,
        col2: Color,
        col3: Color,
        col4: Color,
    );
    pub fn DrawRectangleLines(posX: c_int, posY: c_int, width: c_int, height: c_int, color: Color);
    pub fn DrawRectangleLinesEx(rec: Rectangle, lineThick: c_int, color: Color);
    pub fn DrawRectangleRounded(rec: Rectangle, roundness: c_float, segments: c_int, color: Color);
    pub fn DrawRectangleRoundedLines(
        rec: Rectangle,
        roundness: c_float,
        segments: c_int,
        color: Color,
    );
    pub fn DrawTriangle(v1: Vector2, v2: Vector2, v3: Vector2, color: Color);
    pub fn DrawTriangleLines(v1: Vector2, v2: Vector2, v3: Vector2, color: Color);
    pub fn DrawTriangleFan(points: *mut Vector2, numPoints: c_int, color: Color);
    pub fn DrawTriangleStrip(points: *mut Vector2, pointsCount: c_int, color: Color);
    pub fn DrawPoly(
        center: Vector2,
        sides: c_int,
        radius: c_float,
        rotation: c_float,
        color: Color,
    );
    pub fn DrawPolyLines(
        center: Vector2,
        sides: c_int,
        radius: c_float,
        rotation: c_float,
        color: Color,
    );
    // Basic shapes collision detection functions
    pub fn CheckCollisionRecs(rec1: Rectangle, rec2: Rectangle) -> bool;
    pub fn CheckCollisionCircles(
        center1: Vector2,
        radius1: c_float,
        center2: Vector2,
        radius2: c_float,
    ) -> bool;
    pub fn CheckCollisionCircleRec(center: Vector2, radius: c_float, rec: Rectangle) -> bool;
    pub fn GetCollisionRec(rec1: Rectangle, rec2: Rectangle) -> Rectangle;
    pub fn CheckCollisionPointRec(point: Vector2, rec: Rectangle) -> bool;
    pub fn CheckCollisionPointCircle(point: Vector2, center: Vector2, radius: c_float) -> bool;
    pub fn CheckCollisionPointTriangle(
        point: Vector2,
        p1: Vector2,
        p2: Vector2,
        p3: Vector2,
    ) -> bool;

    // Textures
    // Texture loading function
    pub fn LoadTexture(fileName: *const c_char) -> Texture2D;
    pub fn UnloadTexture(texture: Texture2D);

    // Texture drawing functions
    pub fn DrawTexture(texture: Texture2D, posX: c_int, posY: c_int, tint: Color);

    // Text
    // Text drawing functions
    pub fn DrawFPS(x: c_int, y: c_int);
    pub fn DrawText(text: *const c_char, posX: c_int, posY: c_int, fontSize: c_int, color: Color);

    // Text misc. functions
    pub fn MeasureText(text: *const c_char, fontSize: c_int) -> c_int;
}
